logo img on mobile view fix

--- a/css/style.css
+++ b/css/style.css
@@ -253,6 +253,7 @@ header {
 @media (max-width: 992px) {
 	.logo {
 		text-align: center!important;
+		max-width: 80% !important;
 	}
 	.title {
 		text-align: center!important;
